Fix some test but discovered a design flaw in the meta-grammar.

--- a/PasLib/PasLib.csproj
+++ b/PasLib/PasLib.csproj
@@ -13,4 +13,8 @@
     <RootNamespace>PasLib</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
 </Project>
