Add a simpler test with the same failure profile as the more complex DisjunctionGrammar one.

--- a/PasLibTest/PasLibTest.csproj
+++ b/PasLibTest/PasLibTest.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Meta\AnyGrammar.txt" />
+    <EmbeddedResource Include="Meta\Disjunction3TermsGrammar.txt" />
     <EmbeddedResource Include="Meta\DisjunctionGrammar.txt" />
     <EmbeddedResource Include="Meta\LiteralGrammar.txt" />
     <EmbeddedResource Include="Meta\OneLetterOneRuleGrammar.txt" />
