--- a/PasFunction/PasFunction.csproj
+++ b/PasFunction/PasFunction.csproj
@@ -18,4 +18,8 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Functions\" />
+  </ItemGroup>
 </Project>
