--- a/PasLibTest/PasLibTest.csproj
+++ b/PasLibTest/PasLibTest.csproj
@@ -22,6 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Meta\AdHoc\TwoRules.txt" />
     <None Remove="Meta\AnyGrammar.txt" />
     <None Remove="Meta\DisjunctionGrammar.txt" />
     <None Remove="Meta\LiteralGrammar.txt" />
@@ -29,19 +30,29 @@
     <None Remove="Meta\RangeGrammar.txt" />
     <None Remove="Meta\RepeatGrammar.txt" />
     <None Remove="Meta\SequenceGrammar.txt" />
+    <None Remove="Meta\Simple\AnyGrammar.txt" />
+    <None Remove="Meta\Simple\Disjunction3TermsGrammar.txt" />
+    <None Remove="Meta\Simple\DisjunctionGrammar.txt" />
+    <None Remove="Meta\Simple\LiteralGrammar.txt" />
+    <None Remove="Meta\Simple\OneLetterOneRuleGrammar.txt" />
+    <None Remove="Meta\Simple\RangeGrammar.txt" />
+    <None Remove="Meta\Simple\RepeatGrammar.txt" />
+    <None Remove="Meta\Simple\SequenceGrammar.txt" />
+    <None Remove="Meta\Simple\SubstractGrammar.txt" />
     <None Remove="Meta\SubstractGrammar.txt" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Meta\AnyGrammar.txt" />
-    <EmbeddedResource Include="Meta\Disjunction3TermsGrammar.txt" />
-    <EmbeddedResource Include="Meta\DisjunctionGrammar.txt" />
-    <EmbeddedResource Include="Meta\LiteralGrammar.txt" />
-    <EmbeddedResource Include="Meta\OneLetterOneRuleGrammar.txt" />
-    <EmbeddedResource Include="Meta\RangeGrammar.txt" />
-    <EmbeddedResource Include="Meta\RepeatGrammar.txt" />
-    <EmbeddedResource Include="Meta\SequenceGrammar.txt" />
-    <EmbeddedResource Include="Meta\SubstractGrammar.txt" />
+    <EmbeddedResource Include="Meta\AdHoc\TwoRules.txt" />
+    <EmbeddedResource Include="Meta\Simple\AnyGrammar.txt" />
+    <EmbeddedResource Include="Meta\Simple\Disjunction3TermsGrammar.txt" />
+    <EmbeddedResource Include="Meta\Simple\DisjunctionGrammar.txt" />
+    <EmbeddedResource Include="Meta\Simple\LiteralGrammar.txt" />
+    <EmbeddedResource Include="Meta\Simple\OneLetterOneRuleGrammar.txt" />
+    <EmbeddedResource Include="Meta\Simple\RangeGrammar.txt" />
+    <EmbeddedResource Include="Meta\Simple\RepeatGrammar.txt" />
+    <EmbeddedResource Include="Meta\Simple\SequenceGrammar.txt" />
+    <EmbeddedResource Include="Meta\Simple\SubstractGrammar.txt" />
   </ItemGroup>
 
   <ItemGroup>
