--- a/PasLibTest/PasLibTest.csproj
+++ b/PasLibTest/PasLibTest.csproj
@@ -22,6 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Meta\AdHoc\Comments.txt" />
     <None Remove="Meta\AdHoc\TwoRules.txt" />
     <None Remove="Meta\AnyGrammar.txt" />
     <None Remove="Meta\DisjunctionGrammar.txt" />
@@ -43,6 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Meta\AdHoc\Comments.txt" />
     <EmbeddedResource Include="Meta\AdHoc\TwoRules.txt" />
     <EmbeddedResource Include="Meta\Simple\AnyGrammar.txt" />
     <EmbeddedResource Include="Meta\Simple\Disjunction3TermsGrammar.txt" />
