--- a/PasLibTest/PasLibTest.csproj
+++ b/PasLibTest/PasLibTest.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <None Remove="Meta\AdHoc\Comments.txt" />
+    <None Remove="Meta\AdHoc\Interleave.txt" />
     <None Remove="Meta\AdHoc\TwoRules.txt" />
     <None Remove="Meta\AnyGrammar.txt" />
     <None Remove="Meta\DisjunctionGrammar.txt" />
@@ -45,6 +46,7 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Meta\AdHoc\Comments.txt" />
+    <EmbeddedResource Include="Meta\AdHoc\Interleave.txt" />
     <EmbeddedResource Include="Meta\AdHoc\TwoRules.txt" />
     <EmbeddedResource Include="Meta\Simple\AnyGrammar.txt" />
     <EmbeddedResource Include="Meta\Simple\Disjunction3TermsGrammar.txt" />
