--- a/PasWebApi/Dockerfile
+++ b/PasWebApi/Dockerfile
@@ -21,6 +21,10 @@ WORKDIR /work
 #	Copy package
 COPY --from=build /src/app .
 
+# Make port 80 available to the world outside this container
+
+EXPOSE 80
+
 #	Define environment variables
 ENV TODO ""
 
