--- a/PasWebApi/PasWebApi.csproj
+++ b/PasWebApi/PasWebApi.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
+    <PackageReference Include="AppInsights.TelemetryInitializers" Version="0.1.275" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.4" />
   </ItemGroup>
 
