--- a/PasWebApi/appsettings.json
+++ b/PasWebApi/appsettings.json
@@ -13,6 +13,6 @@
     }
   },
   "ApplicationInsights": {
-    "InstrumentationKey": "TO-SETUP-IN-RELEASE"
+    "InstrumentationKey": "aab45813-b5e0-42a8-af2a-0b68d2e3687b"
   }
 }
