--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,8 @@
-pool:
-  vmImage: 'Ubuntu 16.04'
+resources:
+- repo: self
+queue:
+  name: Hosted Ubuntu 1604
+
 variables:
   chart-path: chart-path
   image-name:  image-name
