--- a/PasApiClient/PasApiClient.csproj
+++ b/PasApiClient/PasApiClient.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.1.0</Version>
+    <Authors>Vincent-Philippe Lauzon</Authors>
+    <PackageProjectUrl>https://github.com/vplauzon/ParserAsServiceApi</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/vplauzon/ParserAsServiceApi</RepositoryUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
