--- a/build-nuget.yaml
+++ b/build-nuget.yaml
@@ -9,10 +9,23 @@ steps:
   inputs:
     scriptPath: deployment/patch-nuget-version.py
     arguments: 'PasApiClient/PasApiClient.csproj $(Build.BuildId)'
-- task: DotNetCoreCLI@2
-  displayName: Build Nugets
+- task: Bash@3
+  displayName: 'Copy Alpha project'
   inputs:
-    projects: 'PasApiClient/*nuget.csproj'
+    script:  'cp PasApiClient/alpha-nuget.csproj PasApiClient/PasApiClient.csproj'
+- task: DotNetCoreCLI@2
+  displayName: Build Alpha Nuget
+  inputs:
+    projects: 'PasApiClient/PasApiClient.csproj'
+    arguments: '--configuration release'
+- task: Bash@3
+  displayName: 'Copy Gold project'
+  inputs:
+    script:  'cp PasApiClient/gold-nuget.csproj PasApiClient/PasApiClient.csproj'
+- task: DotNetCoreCLI@2
+  displayName: Build Gold Nuget
+  inputs:
+    projects: 'PasApiClient/PasApiClient.csproj'
     arguments: '--configuration release'
 - task: DotNetCoreCLI@2
   displayName: Build Nuget tests
