--- a/build-nuget.yaml
+++ b/build-nuget.yaml
@@ -12,7 +12,7 @@ steps:
 - task: Bash@3
   displayName: 'Copy Alpha project'
   inputs:
-    script:  'cp PasApiClient/alpha-nuget.csproj PasApiClient/PasApiClient.csproj'
+    script:  'pwd && ls && cp PasApiClient/alpha-nuget.csproj PasApiClient/PasApiClient.csproj'
 - task: DotNetCoreCLI@2
   displayName: Build Alpha Nuget
   inputs:
