--- a/build-helm.yaml
+++ b/build-helm.yaml
@@ -14,6 +14,12 @@ steps:
     arguments: '$(app-version-txt-path) $(app-version-cs-path) $(Build.BuildId) $(Build.ArtifactStagingDirectory)/FullVersion.txt'
 
 - task: DotNetCoreCLI@2
+  displayName: 'Build'
+  inputs:
+    command:  test
+    projects:  PasLibTest
+
+- task: DotNetCoreCLI@2
   displayName: 'Test'
   inputs:
     command:  test
