--- a/build-helm.yaml
+++ b/build-helm.yaml
@@ -16,7 +16,7 @@ steps:
 - task: DotNetCoreCLI@2
   displayName: 'Build'
   inputs:
-    command:  test
+    command:  build
     projects:  PasLibTest
 
 - task: DotNetCoreCLI@2
