Add second host on API

--- a/deployment/helm-chart/ParserAsServiceApi/templates/ingress.yaml
+++ b/deployment/helm-chart/ParserAsServiceApi/templates/ingress.yaml
@@ -14,3 +14,9 @@ spec:
         - backend:
             serviceName: parser-api-svc
             servicePort: 80
+    - host: {{.Values.host2}}
+      http:
+        paths:
+        - backend:
+            serviceName: parser-api-svc
+            servicePort: 80
